# rustmisko-live

./: .env.example  .gitignore  AKTUALNI_PROGRESS.md  AUDIT_2026-02-28.md  AUDIT_2026-03-04.md  AUDIT_2026-03-09_60D_PLAN.md  AUDIT_2026-03-12_E2E.md  CONTEXT.md  Cargo.toml  DECISIONS.md  EDGE_NAPADY.md  IMPLEMENTACNI_ROADMAP.md  MATCHING_FIX_PLAN.md  NAVRH.md  PLAN.md  SCHEMA_MAP.md  SCORE_MODELS.md  STRATEGIES.md  UK_VPS_SETUP.md  WIN11_PERSISTENT_BROWSER_POC_CHECKLIST.md  WS_SHADOW_AUDIT.md  autostart.bat  check_conditions.mjs  debug_opps.json  debug_state.json  err.txt  error.txt  error_output.txt  error_utf8.txt  live_out.txt  monitor_600s.ps1  night_watch.ps1  night_watch_start.bat  start_system.ps1  test_getlive.json  tmp_query_basketball.json  tmp_query_football.json  tmp_query_mma.json  watchdog.ps1
.github/instructions/: CONTEXT.md.instructions.md
crates/arb_detector/: Cargo.toml  cargo_err.json  err.txt
crates/arb_detector/src/: lib.rs
crates/esports_monitor/: Cargo.toml  cargo_err.json  err.txt
crates/esports_monitor/src/: bin.rs  lib.rs
crates/hltv_scraper/: Cargo.toml
crates/hltv_scraper/src/: lib.rs
crates/logger/: Cargo.toml
crates/logger/src/: lib.rs
crates/prediction_engine/: Cargo.toml
crates/prediction_engine/src/: lib.rs
crates/price_monitor/: Cargo.toml
crates/price_monitor/src/: lib.rs
dashboard/: package-lock.json  package.json  server.js  setup.js
dashboard/public/: app.js  index.html  login.html  style.css
data/: active_bets.json  bet_count_daily.txt  bet_history.txt  daily_pnl.json  dashboard.secret  dashboard_config.json  nft_model.json  pending_claims.txt
examples/: test_feed_messages.json
executor/: check_conditions.mjs  claim_payouts.cjs  diag_cond126.mjs  diag_events.mjs  diag_events.txt  diag_full_history.mjs  diag_full_scan.mjs  diag_investigate.mjs  diag_output.txt  diag_revert.mjs  diag_senders.mjs  diag_senders.txt  diag_summary.mjs  diag_summary.txt  find_selector.mjs  index.js  nft_model.mjs  overtime_paper.mjs  package-lock.json  package.json
src/: azuro_poller.rs  feed_db.rs  feed_hub.rs  hltv_test.rs  main.rs  ultra_live.rs
tests/: jsonl_replay_determinism.rs
tools/: bet_diagnostics.ps1  burnin_watch_24h.ps1  daily_edge_report.ps1  kpi_anomaly_precision.mjs  live_autobuy_audit.mjs  monitor_ledger_600s.mjs  monitor_live.ps1  polygon_usdt_approvals.mjs  reconcile_onchain_accepted_odds.ps1  sport_pipeline_audit.ps1  test_azuro_ws.mjs  today_audit.mjs  watch_300m.mjs  watchdog_auto_only.mjs
userscripts/: FIXED_chance_scraper_v2.user.js  chance_live_scraper.user.js  dust2_live_scraper.user.js  flashscore_multisport_scraper.user.js  flashscore_tennis_scraper.user.js  fortuna_live_scraper.user.js  hltv_live_scraper.user.js  odds_scraper.user.js  tipsport_odds_scraper.user.js
