[workspace]
members = [
    ".",
    "crates/price_monitor",
    "crates/arb_detector",
    "crates/logger",
    "crates/esports_monitor",
    "crates/hltv_scraper",
    "crates/prediction_engine",  # Přidáno prediction engine
]
resolver = "2"

[workspace.dependencies]
tokio      = { version = "1",    features = ["full"] }
reqwest    = { version = "0.12", features = ["json"] }
serde      = { version = "1",    features = ["derive"] }
serde_json = "1"
dotenv     = "0.15"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono     = { version = "0.4",  features = ["serde"] }
anyhow     = "1"
fd-lock    = "4"

[package]
name    = "rustmisko-live"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "live-observer"
path = "src/main.rs"

[[bin]]
name = "hltv-test"
path = "src/hltv_test.rs"

[[bin]]
name = "ultra-live"
path = "src/ultra_live.rs"

[[bin]]
name = "feed-hub"
path = "src/feed_hub.rs"

[[bin]]
name = "alert-bot"
path = "src/bin/alert_bot.rs"

[dependencies]
tokio              = { workspace = true }
dotenv             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow             = { workspace = true }
fd-lock            = { workspace = true }
esports_monitor    = { path = "crates/esports_monitor" }
arb_detector       = { path = "crates/arb_detector" }
logger             = { path = "crates/logger" }
hltv_scraper       = { path = "crates/hltv_scraper" }
prediction_engine  = { path = "crates/prediction_engine" }
tokio-tungstenite  = "0.26"
futures-util       = "0.3"
serde              = { workspace = true }
serde_json         = { workspace = true }
chrono             = { workspace = true }
rusqlite           = { version = "0.32", features = ["bundled"] }
reqwest            = { workspace = true }
