[package]
name = "hltv_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
scraper = "0.18"
reqwest = { version = "0.12", features = ["json", "gzip"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
headless_chrome = "1.0.21"
