[package]
name    = "price_monitor"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { workspace = true }
reqwest    = { workspace = true, features = ["json"] }
serde      = { workspace = true }
serde_json = { workspace = true }
anyhow     = { workspace = true }
tracing    = { workspace = true }
chrono     = { workspace = true }
logger     = { path = "../logger" }
